--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,31 @@
 ﻿<!doctype html>
 <html class="site-assr team-cpas instance-assr-cpas" lang="ru" data-react-helmet="lang" m_init="2233643202311171224"><head>
+<!-- Hotjar Tracking Code for https://morugahackathons.github.io/IT-Cup-2024/ -->
+    <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3908162,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
         <script type="text/javascript" async="" id="topmailru-code" src="https://top-fwz1.mail.ru/js/code.js"></script><script async="" src="//metrics.alfabank.ru/metrica/sp.js"></script><script async="" src="https://mc.yandex.ru/metrika/tag.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-MS8K9L"></script><script>if (window.performance && performance.mark) { performance.mark('head-start'); }</script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=1280">
 
-        
+        <!-- Hotjar Tracking Code for https://morugahackathons.github.io/IT-Cup-2024/ -->
+    <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3908162,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   <link rel="icon" type="image/x-icon" href="//alfabank.st/media/favicon_alfa-logo_32x32_common_28-08-2019.ico">
   <link rel="icon" type="image/png" href="//alfabank.st/media/favicon_alfa-logo_16x16_desktop_08-08-2019.png" sizes="16x16">
   <link rel="icon" type="image/png" href="//alfabank.st/media/favicon_alfa-logo_32x32_desktop_08-08-2019.png" sizes="32x32">
